# LSPlayer

./: .gitignore  CMakeLists.txt  LICENSE  LightSpeedPlayer.asm  LightSpeedPlayer_Micro.asm  LightSpeedPlayer_cia.asm  LightSpeedPlayer_fade.asm  README.md  benchmark.adf  versions.txt
Example/: Example_Easy.asm  Example_Insane.asm  convert.cmd  rink-a-dink.lsbank  rink-a-dink.lsmusic  rink-a-dink.mod  rink-a-dink_insane.asm
builds/Linux/: LSPConvert
builds/macOS/: LSPConvert
license_/: credits.txt
src/: LSPConvert.cpp  LSPConvert.sln  LSPConvert.vcxproj  LSPConvert.vcxproj.filters  LSPDecoder.cpp  LSPDecoder.h  LSPEncoder.cpp  LSPEncoder.h  LSPTypes.h  MemoryStream.cpp  MemoryStream.h  PackingEstimate.cpp  Paula.cpp  Paula.h  ValueEncoder.cpp  ValueEncoder.h  WavWriter.cpp  WavWriter.h  WindowsCompat.cpp  WindowsCompat.h  adpcm.cpp  adpcm.h  crc32.cpp  crc32.h
